force-app/main/default/objects/redwing__Blank_Item__c/redwing__Blank_Item__c.object-meta.xml
<CustomObject>
    <label>Blank Item</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>Blank Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blank Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>