force-app/main/default/objects/redwing__Blank_Item__c/fields/redwing__Answer_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Answer_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>System Id of a blank answer.</inlineHelpText>
    <label>Answer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>