force-app/main/default/objects/redwing__Blank_Item__c/fields/redwing__Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>redwing__Answer_Text__c</fullName>
    <inlineHelpText>Blank answer option in text format.</inlineHelpText>
    <label>Answer Text</label>
    <length>250</length>
    <type>Text</type>
</CustomField>