force-app/main/default/objects/redwing__Blank_Item__c/fields/redwing__Blank__c.field-meta.xml
<CustomField>
    <fullName>redwing__Blank__c</fullName>
    <inlineHelpText>Related Blank record.</inlineHelpText>
    <label>Blank</label>
    <referenceTo>redwing__Blank__c</referenceTo>
    <relationshipLabel>Blank Items</relationshipLabel>
    <relationshipName>Blank_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>