force-app/main/default/objects/redwing__Blank_Item__c/fields/redwing__Is_Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>redwing__Is_Correct_Answer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, defines if the option is correct for the corresponding blank.</inlineHelpText>
    <label>Is Correct Answer</label>
    <type>Checkbox</type>
</CustomField>