force-app/main/default/objects/redwing__Blank_Item__c/fields/redwing__Order__c.field-meta.xml
<CustomField>
    <fullName>redwing__Order__c</fullName>
    <inlineHelpText>Number that defines the position in which a Fill-in-the-Blank answer will appear in the picklist.</inlineHelpText>
    <label>Order</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>